Change CSS to SCSS

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main-container">
 
-  <header class="header-6 header-transparent">
+  <header class="header-6 header-itau">
     <div class="branding">
       <a href="..." class="nav-link">
         <clr-icon shape="vm-bug"></clr-icon>
