Main pages of webapp

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,27 +1,5 @@
 <main class="main-container">
-
-  <header class="header-6 header-itau">
-    <div class="branding">
-      <a href="..." class="nav-link">
-        <clr-icon shape="vm-bug"></clr-icon>
-        <span class="title">Campus</span>
-      </a>
-    </div>
-    <div class="header-nav">
-      <a href="..." class="active nav-link"><span class="nav-text">Explorar</span></a>
-      <a href="..." class="nav-link"><span class="nav-text">Colaborar</span></a>
-    </div>
-    <div class="header-actions">
-      <button class="btn btn-itau">Get Started</button>
-      <a href="..." class="nav-link nav-icon">
-        <clr-icon shape="user"></clr-icon>
-      </a>
-    </div>
-  </header>
-
-  <section class="slider">
-  </section>
-
+  <router-outlet></router-outlet>
 </main>
 
 
