--- a/app/src/app/pages/home/home.component.html
+++ b/app/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
         <h2>Desenvolvimento</h2>
       </div>
       <div *ngFor="let curso of cursos" class="col-md-2 col-sm-12 col-xs-12">
-        <div class="card clickable">
+        <div class="card clickable" [routerLink]="['/curso-detalhe']">
           <div class="card-img">
             <img src="{{ curso.imagem }}">
           </div>
@@ -31,7 +31,7 @@
         <h2>User Experience (UX)</h2>
       </div>
       <div *ngFor="let curso of cursos" class="col-md-2 col-sm-12 col-xs-12">
-        <div class="card clickable">
+        <div class="card clickable" [routerLink]="['/curso-detalhe']">
           <div class="card-img">
             <img src="{{ curso.imagem }}">
           </div>
