--- a/app/src/app/pages/courses/courses.component.html
+++ b/app/src/app/pages/courses/courses.component.html
@@ -6,7 +6,7 @@
 
     <div class="clr-row">
       <div *ngFor="let curso of cursos" class="col-md-2 col-sm-12 col-xs-12">
-        <div class="card clickable">
+        <div class="card clickable" [routerLink]="['/curso-detalhe']">
           <div class="card-img">
             <img src="{{ curso.imagem }}">
           </div>
