Custom Style Card

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,6 +1,7 @@
 @import './assets/styles/colors.scss';
 @import './assets/styles/buttons.scss';
 @import './assets/styles/typography.scss';
+@import './assets/styles/cards.scss';
 
 * {
   margin: 0;
